<resources>
    <string name="app_name">NewToDo</string>
    <string name="action_settings">Settings</string>
    <string name="add_task">Add Task</string>
    <string name="enter_task">Enter Task Name</string>
    <string name="_3_march">3 March 13:30 PM</string>
    <string name="play_football">Play football</string>
    <string name="_4_march">4 March 22:20 AM</string>
    <string name="sunday">Sunday</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
</resources>
