<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    tools:context="com.drmas.issam.newtodoapp.SingleTask">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/singleTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/play_football"
            android:textColor="#000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/singleTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="120dp"
            android:text="@string/_4_march"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnImgDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:background="@color/cardview_dark_background"
            android:contentDescription="@string/delete"
            app:srcCompat="@android:drawable/ic_menu_delete" />

    </android.support.v7.widget.CardView>


</LinearLayout>
