<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.drmas.issam.newtodoapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relLay"
        >
        
        <ImageView
            android:background="@drawable/view"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/view" />

        <TextView
            android:id="@+id/bannerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:text="@string/sunday"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bannerTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bannerDay"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/_4_march"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />
        
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/task_list">
    </android.support.v7.widget.RecyclerView>



</LinearLayout>
